--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <script src="{% static 'js/color-modes.js' %}"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% translate 'Task Manager' %}</title>
+    <title>{% block title %}{% translate 'Task Manager' %}{% endblock %}</title>
     {% bootstrap_css %}
     {% bootstrap_javascript %}
 </head>
@@ -31,17 +31,27 @@
             <div class="collapse navbar-collapse" id="navContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">{% translate 'Users' %}</a>
+                        <a href="{% url 'all_users' %}" class="nav-link">{% translate 'Users' %}</a>
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <button type="button" class="btn btn-outline-primary me-2">{% translate 'Login' %}</button>
-                    <button type="button" class="btn btn-primary">{% translate 'Sign-up' %}</button> 
+                    {% if request.user.is_authenticated %}
+                    <form method="post" action="{% url 'logout_user' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-outline-primary me-2">{% translate 'Logout' %}</button>
+                    </form>
+                    {% else %}
+                    <a href="{% url 'login_user' %}" class="btn btn-outline-primary me-2">{% translate 'Login' %}</a>
+                    <a href="{% url 'signup_user' %}" class="btn btn-primary">{% translate 'Sign-up' %}</a>
+                    {% endif %}
                 </div>     
             </div>
         </div>
     </nav>
 
+    {% bootstrap_messages %}
+
+    {% block content %}
     <main class="container flex-grow-1">
         <div class="card mt-4">
             <div class="card-body p-5 bg-body-tertiary">
@@ -52,6 +62,7 @@
             </div>
         </div>
     </main>
+    {% endblock %}
 
     <div class="container">
         <footer class="d-flex justify-content-between align-items-center py-3 my-4 border-top">
