--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a href="{% url 'all_statuses' %}" class="nav-link">{% translate 'Statuses' %}</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="{% url 'all_tasks' %}" class="nav-link">{% translate 'Tasks' %}</a>
+                    </li>
                     {% endif %}
                 </ul>
                 <div class="d-flex">
