--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a href="{% url 'all_tasks' %}" class="nav-link">{% translate 'Tasks' %}</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="{% url 'all_labels' %}" class="nav-link">{% translate 'Labels' %}</a>
+                    </li>
                     {% endif %}
                 </ul>
                 <div class="d-flex">
