--- a/templates/tasks/show.html
+++ b/templates/tasks/show.html
@@ -29,6 +29,16 @@
                     <div class="col">{{ task.date_created }}</div>
                 </div>
                 <div class="row p-1">
+                    <div class="col">
+                        <h6>{% translate 'Lables' %}:</h6>
+                        <ul>
+                            {% for label in task.labels.all %}
+                            <li>{{ label.name }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+                <div class="row p-1">
                     <a href="{% url 'update_task' task.id %}">{% translate 'Edit' %}</a>
                     <br>
                     <a href="{% url 'delete_task' task.id %}">{% translate 'Delete' %}</a>
