--- a/templates/tasks/index.html
+++ b/templates/tasks/index.html
@@ -11,7 +11,7 @@
     <div class="card mb-3">
         <div class="card-body bg-light">
            <form method="get">
-                {% bootstrap_form form %}
+                {% bootstrap_form filter.form %}
                 <button type="submit" class="btn btn-primary">{% translate 'Show' %}</button>
             </form> 
         </div>
