Change html lang to "ru" and change LANGUAGE_CODE to "ru-ru"

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 {% load static %}
 {% load i18n %}
 
-<html lang="en">
+<html lang="ru">
 <head>
     <!-- Скрипт для смены темы -->
     <script src="{% static 'js/color-modes.js' %}"></script>
