--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -9,7 +9,7 @@
     <form method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
-        <input type="submit" class="btn btn-primary" value="{% translate 'Sign up' %}">
+        <input type="submit" class="btn btn-primary" value="{% translate 'Register' %}">
     </form>
 </main>
 {% endblock %}
