--- a/templates/tasks/show.html
+++ b/templates/tasks/show.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="row p-1">
                     <div class="col">
-                        <h6>{% translate 'Lables' %}:</h6>
+                        <h6>{% translate 'Labels' %}:</h6>
                         <ul>
                             {% for label in task.labels.all %}
                             <li>{{ label.name }}</li>
