--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% translate 'Task Manager' %}{% endblock %}</title>
+    <!-- Подключаем Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
     {% bootstrap_css %}
     {% bootstrap_javascript %}
 </head>
 <body class="d-flex flex-column min-vh-100">
     <!-- svg иконки -->
     {% include 'svg/theme_icons.html' %}
-    {% include 'svg/social_icons.html' %}
     <!-- Кнопка с меню выбором цвета темы -->
     {% include 'theme_select.html' %}
 
@@ -66,10 +68,8 @@
     <main class="container flex-grow-1">
         <div class="card mt-4">
             <div class="card-body p-5 bg-body-tertiary">
-                <h5 class="card-title display-4 mb-0">{% translate 'Hello from Hexlet!' %}</h5>
-                <p class="card-text lead">{% translate 'Practical programming courses' %}</p>
-                <hr>
-                <button class="btn btn-primary btn-lg">{% translate 'Learn more' %}</button>
+                <h5 class="card-title display-4 mb-0">{% translate 'Welcome!' %}</h5>
+                <p class="card-text lead">{% translate 'This is the best task manager in the world. Just give it a try! The interface is absolutely intuitive.' %}</p>
             </div>
         </div>
     </main>
@@ -81,9 +81,12 @@
           </div>
 
           <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
-            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+            <li class="ms-3">
+                <a class="text-body-secondary" href="https://github.com/3FANG"><i class="bi bi-github" style="font-size: 2rem"></i></i></a>
+            </li>
+            <li class="ms-3">
+                <a class="text-body-secondary" href="https://t.me/brissende"><i class="bi bi-telegram" style="font-size: 2rem"></i></a>
+            </li>
           </ul>
         </footer>
     </div>
