--- a/templates/theme_select.html
+++ b/templates/theme_select.html
@@ -1,5 +1,5 @@
 <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
-    <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
+    <button class="btn btn-primary py-2 dropdown-toggle d-flex align-items-center"
             id="bd-theme"
             type="button"
             aria-expanded="false"
@@ -12,8 +12,10 @@
       <li>
         <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
           <svg class="bi me-2 opacity-50" width="1em" height="1em"><use href="#sun-fill"></use></svg>
+          <!-- <i class="bi bi-sun-fill me-2 opacity-50" role="img" style="font-size: 1em;"></i> -->
           Light
           <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
+          <!-- <i class="bi bi-check2 ms-auto d-none" role="img" style="font-size: 1em;"></i> -->
         </button>
       </li>
       <li>
