--- a/templates/tasks/show.html
+++ b/templates/tasks/show.html
@@ -8,7 +8,7 @@
     <h1 class="my-4">{% translate "Viewing a task" %}</h1>
     <div class="card">
         <div class="card-header text-bg-secondary"><h2>{{ task.name }}</h2></div>
-        <div class="card-body bg-light">
+        <div class="card-body bg-body-tertiary">
             <p>{{ task.description }}</p>
             <hr>
             <div class="container">
